coin get multiplied with hardness

--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
         }
       }
       if (match && !reduceLives) {
-        this.highscore += 100000;
+        this.highscore += 100000*this.curHardness;
         this.coin.remove();
         this.initCoin();
       }
